fix: make multiselect dropdown spacing consistent (#1165)

--- a/src/components/MultiSelect/MultiSelect.scss
+++ b/src/components/MultiSelect/MultiSelect.scss
@@ -56,6 +56,7 @@ $dropdown-max-height: 20rem;
   list-style: none;
   margin-bottom: $sph--x-small;
   margin-left: 0;
+  margin-top: $sph--x-small;
   padding-left: 0;
 }
 
